# vision-zero-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: data_contracts.md  design-notes.md
schema/: accidents.sql  drop_accidents.sql
schema/validation/: fars_blocking_checks.sql  fars_diagnostics.sql
scripts/: cli_fars.py  reset_db.sh  validate_fars.sh
src/: logger.py
src/db/: connection.py
src/etl/: fars_pipeline.py  run_fars_pipeline.py
src/etl/extract/fars/: extract_fars.py  ingest_plan_fars.py  preview_fars_year.py
src/etl/load/: load_fars.py
src/etl/transform/: parse_fars_crash.py
src/scripts/: download_file.py
src/utils/: downloader.py
tests/db/: test_connection.py
tests/extract/fars/: test_download_fars.py  test_ingest_plan_fars.py
tests/utils/: test_downloader.py
